solve the horizontal scroll bar bug and mixed arrangement

--- a/nut/static/css/web/web-seller-style.less
+++ b/nut/static/css/web/web-seller-style.less
@@ -13,6 +13,7 @@
 .event-cross-screen{
   margin-top:-50px;
   .event-banner-wrapper{
+    margin: 0;
     .sections-titles-wrapper{
       position:fixed;
       top:80px;
@@ -24,19 +25,19 @@
         .sections-titles-nav{
           width:80%;
           margin:0 auto;
-      ul{
-        overflow: hidden;
-        text-align: center;
-        li{
-          //浮动元素会在小屏幕分辨率下存在bug
-          float:left;
-          width:20%;
-             @media screen and (min-width:750px){
+          ul{
+            overflow: hidden;
+            text-align: center;
+            li{
+            //浮动元素会在小屏幕分辨率下存在bug
+              float:left;
+              width:20%;
+              @media screen and (min-width:750px){
               //margin-right:10%;
-      }
-          .section-title{
-            .web-seller-btn;
-            background-color: @foot-bg-color;
+              }
+              .section-title{
+                .web-seller-btn;
+                background-color: @foot-bg-color;
             }
           }
         }
@@ -45,7 +46,7 @@
 
     .banner-img{
       //text-align:center;
-      //overflow:hidden;
+      overflow:hidden;
       width:100%;
       height:0;
       padding-bottom: 450px;
@@ -56,7 +57,11 @@
 }
 
 .share-btn-wrapper{
+  background-color: #ffffff;
+  width:100%;
+  height:50px;
   text-align:center;
+  margin-bottom: 30px;
   .btn-primary{
     .web-seller-btn;
     transform: translateY(-20px);
@@ -64,14 +69,14 @@
 
 }
 
-.container{
+.seller-page-container{
    margin:0 auto;
    .section-floor-wrapper{
      @media screen and (min-width:970px){
        min-height:320px;
        max-height:320px;
        overflow:hidden;
-       background: red;
+
       }
      .section-desc-wrapper{
        //display:table-cell;
@@ -184,12 +189,17 @@
       background-color: #ffffff;
       border-radius: @global-box-radius;
         a{
+         // a hack that the picture show width:height=1:1
          .review-item-pic{
             width:100%;
             height:0;
-            padding-bottom: 60%;
+            padding-bottom: 100%;
             background-position: center center;
             background-size: cover;
+           &.rectangle-pic{
+             //to realise horizontal alignment
+             padding-bottom: 43%;
+           }
         }
    }
     .review-item-desc{
